build: use webpack for prod (disable turbopack) and add vercel-build

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",           // ⬅️ Turbopack für Prod aus
+    "build": "next build",
+    "vercel-build": "next build",   // <- Vercel nutzt dieses Script, wenn vorhanden
     "start": "next start",
     "lint": "eslint",
     "test": "vitest run",
