chore: correct scripts and engines (Node 20)

--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "engines": { "node": "20.x" }
+  "engines": {
+    "node": "20.x"
+  }
 }
